@@ -1,5 +1,0 @@
-#!/bin/sh
-
-# Add directory prefix to all filenames, but leave comments and
-# empty lines unchanged. Also comment out localversion.patch.
-sed -r -e 's,^localversion.patch,#&,' -e 's,^[^# \t],features/all/rt/&,' "debian/patches/features/all/rt/series" > debian/patches/series-rt
