@@ -5,6 +5,7 @@ linux (3.10~rc7-1~exp2) UNRELEASED; urgency=low
     for most patches
   * aufs: Add DEP-5 headers to generated/copied patches
   * [rt] Make genpatch.py work with upstream patch series as well as git
+    - Fold convert-series into genpatch.py
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 01 Jul 2013 00:58:08 +0100
 
